2004-12-28  Leonard den Ottolander  <leonard * den ottolander nl>

	* syntax/spec.syntax: Set whole on spec macro option keywords.

2004-12-13  Pavel S. Shirshov  <me@pavelsh.pp.ru>

        * acinclude.m4: Fix "make distcheck".

2004-12-12  Pavel S. Shirshov  <me@pavelsh.pp.ru>

        * NEWS: Update.

2004-12-10  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* autogen.sh: Comment workaround for Automake 1.5. It's not working
	for Automake 1.9.

2004-12-07  Roland Illig  <roland.illig@gmx.de>

	* syntax/Makefile.am: Don't install syntax highlighting files if
	the internal editor is disabled.

2004-12-03  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* configure.ac: Bump version to 4.6.1a

2004-11-17  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* acinclude.m4: Fix compiling mc with system slang on FreeBSD.

2004-11-16  Roland Illig  <roland.illig@gmx.de>

	* TODO: Checked the remaining vfs/extfs shell scripts and
	removed them from the TODO list. This was the last item
	in the section "Before 4.6.1", so I deleted the whole
	section.

2004-11-08  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* TODO (4.6.2): Fix the '#' in path names issue.

2004-11-07  Roland Illig  <roland.illig@gmx.de>

	* TODO (4.6.1): Moved the '#' in path names issue to 4.6.2.
	* TODO: Added issue about hiding passwords in VFS pathnames.

2004-11-05  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* README: Fix typo.

2004-11-04 Mike Gorchak <mike@malva.ua>

	* mc.qpg.in: Synchronization with the latest file has been added
	to the distro.
	* configure.ac: Added information about status of charset enabling.
	* syntax/Syntax: Treat QNX6 specific files with extensions qpg and
	qpg.in as xml files.

2004-11-02  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: Add feature test whether socklen_t is defined
	in <sys/socket.h>.

2004-10-28  Jindrich Novy  <jnovy@redhat.com>

	* lib/mc.ext.in: Add a few sound formats that "play" and "mikmod"
	utility knows.

2004-10-27  Roland Illig  <roland.illig@gmx.de>
