@@ -1,3 +1,7 @@
+2004-12-30  Andrew V. Samoilov  <sav@bcs.zp.ua>
+
+	* autogen.sh: Fix workaround for automake 1.5.
+
 2004-12-28  Leonard den Ottolander  <leonard * den ottolander nl>
 
 	* syntax/spec.syntax: Set whole on spec macro option keywords.
